Ajuste de cores e layout

--- a/premiacao.html
+++ b/premiacao.html
@@ -46,7 +46,7 @@ https://templatemo.com/tm-563-seo-dream
 
   <!-- ***** MENU ***** -->
   <header class="header-area header-sticky wow slideInDown" data-wow-duration="0.75s" data-wow-delay="0s">
-    <div class="container">
+    <div class="container" style="max-width: 1200px;">
       <div class="row">
         <div class="col-12">
           <nav class="main-nav">
@@ -57,21 +57,19 @@ https://templatemo.com/tm-563-seo-dream
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Início</a></li>
-              <li class="scroll-to-section"><a href="#features">Sobre</a></li>
-              <li class="scroll-to-section"><a href="#about">Premiação</a></li>
-              <li class="scroll-to-section"><a href="#services">Submição</a></li>
-              <li class="nav-item dropdown"> <a style="padding: 0px;" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Resultados</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  <li hidden><a class="dropdown-item" href="#">Separated link</a></li>
-                </ul>
-              </li>
-              <li class="scroll-to-section"><a href="#portfolio">Apoio</a></li>
-              <li class="scroll-to-section"><a href="#contact">Contato</a></li> 
-              <li class="scroll-to-section"><div class="main-blue-button"><a href="#contact">GARANTIR VAGA</a></div></li> 
+              <li class="scroll-to-section"><a href="index.html" >Início</a></li>
+              <li class="scroll-to-section"><a href="index.html">Sobre</a></li>
+              <li class="scroll-to-section"><a href="index.html">Subimição</a></li>
+              <li class="scroll-to-section"><a href="index.html">Equipe</a></li>
+              <li class="scroll-to-section"><a href="premiacao.html" class="active">Premiação</a></li>
+              <li class="scroll-to-section"><a href="index.html">Parcerias</a></li>
+              <li class="scroll-to-section"><a href="#portfolio">Contato</a></li>
+
+
+
+
+              <li hidden class="scroll-to-section"><a href="#contact">Contato</a></li> 
+              <!-- <li class="scroll-to-section"><div class="main-blue-button"><a href="#contact">SUBMETER TRABALHO</a></div></li>  -->
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
@@ -99,7 +97,8 @@ https://templatemo.com/tm-563-seo-dream
           </div>
           <p>SEO Dream is free digital marketing CSS template provided by TemplateMo website. You are allowed to use this template for your business websites. Please DO NOT redistribute this template ZIP file on any Free CSS collection websites. You may contact us for more information. Thank you.</p>       
           <div class="main-green-button">
-            <a href="#">Edital Completo</a>
+            <a href="#">Baixar Edital</a>
+            <a href="index.html" >Fazer Inscrição</a>
           </div> 
         </div>
       </div>
